maven-xpframework-plugin (2.0.0)

  * update pom.xml:
    - change <groupId> from "org.apache.maven.plugins" to "net.xp-forge.maven.plugins"
    - use Sonatype OSS <parent> POM
    - add sources and javadoc artifacts

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 10 Jan 2012

maven-xpframework-plugin (1.1.0)

  * fix coding style issues
  * fix environment variables names:
    - all names are in uppercase now

  * add Maven archetypes:
    - XP-Language library
    - XP standard library

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 10 Jan 2012

  * add support for running XP code

 -- Alex Kiesel <alex@kiesel.name> Mon, 6 Feb 2012

maven-xpframework-plugin (1.0.0)

  * initial release

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Wed, 10 Aug 2011