@@ -11,7 +11,7 @@
   <!-- More project information -->
   <name>${artifactId} library</name>
   <description>This library was automatically generated by maven-archetype-php-library</description>
-  <url>https://github.com/xp-forge/maven-xpframework-plugin</url>
+  <url>https://github.com/xp-forge/xp-maven-plugin</url>
   <inceptionYear>2012</inceptionYear>
   <organization>
     <name>XP-Framework Team</name>
@@ -32,8 +32,8 @@
     <plugins>
       <plugin>
         <groupId>net.xp-forge.maven.plugins</groupId>
-        <artifactId>maven-xpframework-plugin</artifactId>
-        <version>2.0.0</version>
+        <artifactId>xp-maven-plugin</artifactId>
+        <version>3.0.0</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
