@@ -1,25 +1,25 @@
-Build and install the maven-xpframework-plugin
+Build and install the xp-maven-plugin
 ----------------------------------------------
 
-    ~/maven-xpframework-plugin $ mvn install
+    ~/xp-maven-plugin $ mvn install
 
 
 Build and install the "lib-common" artifact
 -------------------------------------------
 
-    ~/maven-xpframework-plugin $ cd examples/lib-common
-    ~/maven-xpframework-plugin/examples/lib-common $ mvn install
+    ~/xp-maven-plugin $ cd examples/lib-common
+    ~/xp-maven-plugin/examples/lib-common $ mvn install
 
 
 Build the "app-hello" application artifact
 ------------------------------------------
 
-    ~/maven-xpframework-plugin/examples/lib-common $ cd ../app-hello
-    ~/maven-xpframework-plugin/examples/app-hello $ mvn package
+    ~/xp-maven-plugin/examples/lib-common $ cd ../app-hello
+    ~/xp-maven-plugin/examples/app-hello $ mvn package
 
 
 Build and run the Uber-XAR
 --------------------------
 
-    ~/maven-xpframework-plugin/examples/app-hello $ mvn -Dxpframework.xar.mergeDependencies package
-    ~/maven-xpframework-plugin/examples/app-hello $ xp -xar target/app-hello-1.0-uber.xar
+    ~/xp-maven-plugin/examples/app-hello $ mvn -Dxpframework.xar.mergeDependencies package
+    ~/xp-maven-plugin/examples/app-hello $ xp -xar target/app-hello-1.0-uber.xar
