@@ -14,8 +14,8 @@
     <plugins>
       <plugin>
         <groupId>net.xp-forge.maven.plugins</groupId>
-        <artifactId>maven-xpframework-plugin</artifactId>
-        <version>2.0.0</version>
+        <artifactId>xp-maven-plugin</artifactId>
+        <version>3.0.0</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
